Updating the printable menus

--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
 
                 <div class="menu-pdf-links">
                     <a href="files/GallipolisPrintableMenu.pdf" target="_blank" class="btn">📄 Gallipolis Printable Menu</a>
-                    <a href="files/PomeroyPrintable Menu.pdf" target="_blank" class="btn">📄 Pomeroy Printable Menu</a>
+                    <a href="files/PomeroyPrintableMenu.pdf" target="_blank" class="btn">📄 Pomeroy Printable Menu</a>
                 </div>
 
                 <div class="menu-info">
