--- a/menu.html
+++ b/menu.html
@@ -395,6 +395,16 @@
                             </span>
                             <span class="item-price">$6.50</span>
                         </div>
+                        <div class="menu-list-item">
+                            <span class="item-name">7 pc. Cinnamon Dunkers</span>
+                            <span class="location-badge">Gallipolis Only</span>
+                            <span class="item-price">$3.49</span>
+                        </div>
+                        <div class="menu-list-item">
+                            <span class="item-name">14 pc. Cinnamon Dunkers</span>
+                            <span class="location-badge">Gallipolis Only</span>
+                            <span class="item-price">$5.99</span>
+                        </div>
                     </div>
                 </div>
 
