Update menu to replace Appetizers with Sides

--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
             <a href="#hamburgers" class="subnav-link">Hamburgers</a>
             <a href="#hot-dogs" class="subnav-link">Hot Dogs</a>
             <a href="#sandwiches" class="subnav-link">Sandwiches</a>
-            <a href="#appetizers" class="subnav-link">Appetizers</a>
+            <a href="#sides" class="subnav-link">Sides</a>
             <a href="#soups-salads" class="subnav-link">Soups & Salads</a>
             <a href="#entrees" class="subnav-link">Entrees</a>
             <a href="#kids" class="subnav-link">Kids Meals</a>
@@ -247,8 +247,8 @@
                     </div>
                 </div>
 
-                <div class="menu-category" id="appetizers">
-                    <h2>Appetizers & Sides</h2>
+                <div class="menu-category" id="sideds">
+                    <h2>Sides</h2>
                     <div class="menu-list">
                         <div class="menu-list-item">
                             <span class="item-name">Sm. Fries</span>
