--- a/menu.html
+++ b/menu.html
@@ -301,11 +301,11 @@
                             <span class="item-price">$5.99</span>
                         </div>
                         <div class="menu-list-item">
-                            <span class="item-name">Sm. Spicy Cheese Curds</span>
+                            <span class="item-name">Sm. Wisconsin White Cheddar Cheese Curds</span>
                             <span class="item-price">$5.79</span>
                         </div>
                         <div class="menu-list-item">
-                            <span class="item-name">Lg. Spicy Cheese Curds</span>
+                            <span class="item-name">Lg. Wisconsin White Cheddar Cheese Curds</span>
                             <span class="item-price">$10.49</span>
                         </div>
                         <div class="menu-list-item">
@@ -543,7 +543,7 @@
                             <span class="item-price">$5.75</span>
                         </div>
                         <div class="menu-list-item">
-                            <span class="item-name">Pecan Pie</span>
+                            <span class="item-name">Chocolate Meringue</span>
                             <span class="item-price">$5.75</span>
                         </div>
                     </div>
